# Ncolor

./: README-ru.md  README.md  pyproject.toml
docs/en/: color.md  cursor.md  debug.md  other.md
docs/ru/: color.md  cursor.md  debug.md  other.md
src/ncolor/: __init__.py  _config.py  _platform.py  color.py  cursor.py  debug.py
